--- a/Caso 1 Actividad Cooperativa artística Ground Zero/CSS/estilopag3.css
+++ b/Caso 1 Actividad Cooperativa artística Ground Zero/CSS/estilopag3.css
@@ -8,6 +8,7 @@
 body {
     font-family: sans-serif;
     padding-top: 80px;
+    background: #E5E5E5;
 }
 
 /* Estilo del menú opciones  */
@@ -26,7 +27,7 @@ body {
     justify-content: space-between;
 }
 
-.nav-link{
+.nav-link2{
     color: white;
     text-decoration: none;
 }
